# tantex

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: deploy.yml  release.yml
dashboard/: components.json  nuxt.config.js  package.json
dashboard/app/assets/css/: tailwind.css
dashboard/app/components/: ByteInput.vue  EmptyState.vue  MetricCard.client.vue  SCard.vue  SettingField.vue  StatBox.vue  StatCard.vue
dashboard/app/composables/: useBreadcrumb.js  useMetricsHistory.js  useStreamEvents.js  useTantex.js
dashboard/app/layouts/: default.vue
dashboard/app/middleware/: auth.global.js
dashboard/app/pages/: docs.vue  index.vue  login.vue  metrics.vue  search.vue  settings.vue
src/: config.rs  main.rs  metrics_writer.rs
src/engine/: index_manager.rs  merge_policy.rs  mod.rs  query.rs  schema.rs  searcher.rs  tokenizers.rs  writer.rs
src/http/: mod.rs  routes.rs  sse.rs
src/protocol/: codec.rs  messages.rs
src/server/: connection.rs  listener.rs  mod.rs
src/shm/: buffer.rs
website/: index.md  package.json
website/.vitepress/: config.mjs
website/.vitepress/theme/: style.css
website/docs/: index.md
website/docs/explanation/: commit-merge-policy.md  compression.md  indexing.md  searching.md  shm-ingestion.md
website/docs/how-to/: configure.md  dashboard.md  design-schema.md  ingest-documents.md  javascript-client.md  search.md
website/docs/reference/: configuration.md  field-types.md  http-api.md  protocol.md  query-syntax.md
website/docs/tutorial/: getting-started.md  installation.md
(+115 files in other folders)
